--- a/forecast.ipynb
+++ b/forecast.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\uger7\\Anaconda3\\lib\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,29 +43,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of future dates to forecast for\n",
-    "futures = ['2020-07-01','2020-08-01','2020-09-01','2020-10-01','2020-11-01','2020-12-01','2021-01-01',\n",
-    "           '2021-02-01','2021-03-01','2021-04-01','2021-05-01','2021-06-01','2021-07-01','2021-08-01',\n",
-    "           '2021-09-01','2021-10-01','2021-11-01','2021-12-01','2022-01-01','2022-02-01','2022-03-01',\n",
-    "           '2022-04-01','2022-05-01','2022-06-01','2022-07-01','2022-08-01','2022-09-01','2022-10-01']\n",
-    "# a lit of state abbreviations\n",
-    "states = [e.replace('\"','') for e in open('state_abb.txt').read().split('\\n')]\n",
-    "# whether or not to rerun the forecast - if false, will read in a pickled forecast\n",
-    "rerun = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_regressors(futures,recession_length=15,month_lags=24,year_lags=0):\n",
-    "    \"\"\" gets a vector of external regressors from FRED\n",
+    "def get_monthly_futures(start,n_periods):\n",
+    "    \"\"\" Returns a list of future dates to forecast for in the form 'yyyy-mm-01'\n",
+    "        Parameters: start : str\n",
+    "                        a date in the form 'yyyy-mm-01'\n",
+    "                    n_periods : int \n",
+    "                        the size of the resulting list\n",
+    "    \"\"\"\n",
+    "    first_month = int(start.split('-')[1])\n",
+    "    months = [first_month + i for i in range(n_periods)]\n",
+    "    years = [int(start.split('-')[0])] * n_periods\n",
+    "    while max(months) > 12:\n",
+    "        for i, m in enumerate(months):\n",
+    "            if m > 12:\n",
+    "                months[i] -= 12\n",
+    "                years[i] += 1\n",
+    "    return ['{}-{:02d}-01'.format(y,m) for y, m in zip(years,months)]\n",
+    "\n",
+    "def get_regressors(futures,recession_length=18,month_lags=24,year_lags=0):\n",
+    "    \"\"\" gets a matrix of external regressors from FRED\n",
     "        extracts the recession indicator and maps to length specified in recession_length\n",
     "        adds month and year lags\n",
     "        adds an inidcator of when the last recession occured\n",
-    "        Paramaters: futures : list\n",
+    "        adds a time trend\n",
+    "        Parameters: futures : list\n",
     "                        a list of dates in format YYYY-mm-01\n",
     "                        if there is overlap between the earlier dates and what is extracted from FRED, that will be handled in the function\n",
     "                    recession_length : int, default 15\n",
@@ -119,45 +129,50 @@
     "        leverages Jupyter widgets\n",
     "        relies on the ExternalsData object type\n",
     "        add new forecast names to the model_options list\n",
+    "        Parameters: top : int\n",
+    "                        the top number of models (by evaluated MAPE) to display\n",
     "    \"\"\"\n",
-    "    def display_user_selections(states_selection,ei_selection,model_selections):\n",
+    "    def display_user_selections(states_selection,ei_selection,models_selection):\n",
     "        \"\"\" displays graphs with seaborn based on what user selects from dropdown menus\n",
     "        \"\"\"\n",
+    "        sns.set(rc={'figure.figsize':(18,10)})\n",
     "        selected_data = forecasts[f'{states_selection}{ei_selection}']\n",
-    "        selected_data.display_ts_plot(models=[m for m,s in model_selections.items() if s == 'True'],\n",
-    "                                     print_mapes=True)\n",
+    "        selected_data.display_ts_plot(models=f'top_{models_selection}',print_mapes=True)\n",
     "\n",
     "    def on_button_clicked(b):\n",
     "        \"\"\" passes the user options to the display_user_selections function after the button is pressed\n",
     "        \"\"\"\n",
     "        states_selection = states_dropdown.value\n",
     "        ei_selection = ei_dropdown.value\n",
-    "        model_selections = {}\n",
-    "        for k,s in model_dropdown.items():\n",
-    "            model_selections[k] = s.value\n",
+    "        models_selection = models_dropdown.value\n",
     "        with output:\n",
     "            clear_output()\n",
-    "            display_user_selections(states_selection,ei_selection,model_selections)\n",
+    "            display_user_selections(states_selection,ei_selection,models_selection)\n",
     "    \n",
-    "    bool_op = ['True','False']\n",
-    "    # the models that you will have the option to display in the graph\n",
-    "    model_options = ['arima','arima_no_reg','tbats','ets','rf','adaboost','gbt','svr','mlr','ridge','lasso','mlp','average']\n",
     "    states_dropdown = widgets.Dropdown(options=states, description = 'State')\n",
     "    ei_dropdown = widgets.Dropdown(options=['SLIND','PHCI','UR'], description = 'Indicator')\n",
-    "    model_dropdown = {}\n",
-    "    for m in model_options:\n",
-    "        model_dropdown[m] = widgets.Dropdown(options=bool_op.copy(), description = m)\n",
+    "    models_dropdown = widgets.Dropdown(options=range(1,14), description = 'No. Models')\n",
     "\n",
     "    # never changes\n",
     "    button = widgets.Button(description=\"Show Forecast\")\n",
     "    output = widgets.Output()\n",
     "\n",
-    "    display(states_dropdown,ei_dropdown)\n",
-    "    for d, k in model_dropdown.items():\n",
-    "        display(k)\n",
+    "    display(states_dropdown,ei_dropdown,models_dropdown)\n",
     "    display(button, output)\n",
     "    \n",
     "    button.on_click(on_button_clicked)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a list of state abbreviations\n",
+    "states = [e.replace('\"','') for e in open('state_abb.txt').read().split('\\n')]\n",
+    "# a list of future dates\n",
+    "futures = get_monthly_futures('2020-08-01',27)"
    ]
   },
   {
@@ -166,6 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# whether or not to rerun the forecast - if false, will read in a pickled forecast\n",
+    "rerun = False\n",
     "if rerun:\n",
     "    externals = get_regressors(futures)\n",
     "    forecasts = {}\n",
@@ -175,18 +192,18 @@
     "            d.get_data_fred(f'{s}{ei}')\n",
     "            d.process_xreg_df(externals,date_col='DATE')\n",
     "            d.check_xreg_future_current_consistency()\n",
-    "            d.forecast_mlp(test_length=3,hyper_params={'hidden_layer_sizes':(10,50,),'solver':'lbfgs','activation':'relu'})\n",
-    "            d.forecast_rf(test_length=3,hyper_params={'n_estimators':500,'max_depth':3})\n",
-    "            d.forecast_gbt(test_length=3,hyper_params={'max_depth':3,'n_estimators':500})\n",
-    "            d.forecast_adaboost(test_length=3,hyper_params={'learning_rate':.5,'n_estimators':250})\n",
-    "            d.forecast_mlr(test_length=3)\n",
-    "            d.forecast_ridge(test_length=3,alpha=10)\n",
-    "            d.forecast_lasso(test_length=3,alpha=.05)\n",
-    "            d.forecast_svr(test_length=3,hyper_params={'kernel':'linear','C':0.05,'epsilon':1.25})\n",
-    "            d.forecast_arima(test_length=3,Xvars='top_3')\n",
-    "            d.forecast_arima(test_length=3,Xvars=None,call_me='arima_no_reg')\n",
-    "            d.forecast_tbats(test_length=3)\n",
-    "            d.forecast_ets(test_length=3)\n",
+    "            d.forecast_mlp(test_length=12,hyper_params={'hidden_layer_sizes':(10,50,),'solver':'lbfgs','activation':'relu'})\n",
+    "            d.forecast_rf(test_length=12,hyper_params={'n_estimators':500,'max_depth':3})\n",
+    "            d.forecast_gbt(test_length=12,hyper_params={'max_depth':3,'n_estimators':500})\n",
+    "            d.forecast_adaboost(test_length=12,hyper_params={'learning_rate':.5,'n_estimators':250})\n",
+    "            d.forecast_mlr(test_length=12)\n",
+    "            d.forecast_ridge(test_length=12,alpha=10)\n",
+    "            d.forecast_lasso(test_length=12,alpha=.05)\n",
+    "            d.forecast_svr(test_length=12,hyper_params={'kernel':'linear','C':0.05,'epsilon':1.25})\n",
+    "            d.forecast_arima(test_length=12,Xvars='top_3')\n",
+    "            d.forecast_arima(test_length=12,Xvars=None,call_me='arima_no_reg')\n",
+    "            d.forecast_tbats(test_length=12)\n",
+    "            d.forecast_ets(test_length=12)\n",
     "            d.forecast_average(models='top_4')\n",
     "            forecasts[f'{s}{ei}'] = d\n",
     "    pickle_out(forecasts)\n",
@@ -202,7 +219,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d331c4172938457a9552b4e6c855ef11",
+       "model_id": "4e76d88ddca44fb3860cece7b6092141",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "156d047296cc4c3487310d951e0435c7",
+       "model_id": "22a783d3433d4739b26bca91200a957b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,12 +247,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f93564869a4c4c539815df91dc120527",
+       "model_id": "afbaf8d1f634459896c0b1b0ff6801d5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='arima', options=('True', 'False'), value='True')"
+       "Dropdown(description='No. Models', options=(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13), value=1)"
       ]
      },
      "metadata": {},
@@ -244,175 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a46fe6dd304778a54003395641ffbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='arima_no_reg', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15b9c5c5cc8247c2851ee2427f70b2d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='tbats', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d26494a28c2c438a95053229a838aafc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='ets', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "385674f9ff0e48c68b6a89ff6077868b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='rf', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f056e82a02474b2384c0d8ad5095aa50",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='adaboost', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1c66bf41fab457cb52b9bf8dad07a42",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='gbt', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82caf388cd184afe9f79bb0bc4d91950",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='svr', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e77edd81269948a499704c34d9938bce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='mlr', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "241a742eddbb4ec2bb7c9ffa3b8bed55",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='ridge', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60156c5ab3fe4adfac4ae2ec2416db1c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='lasso', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c970fcd56d324d30a26039aeaa521ba1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='mlp', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b39b191bc48490eb7c06d676642d529",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='average', options=('True', 'False'), value='True')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2989f6ce4ca549b49dcb48775d2ef4f1",
+       "model_id": "fbd4034a32154a7484c8583adbb8a9ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4074fcc882c047d3b059e62db5df56cc",
+       "model_id": "cf8bb2a562eb47b2903bd44a20b1b56a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +288,6 @@
     }
    ],
    "source": [
-    "sns.set(rc={'figure.figsize':(18,10)})\n",
     "visualize()"
    ]
   },
@@ -467,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
